--- a/present_continuous/index.html
+++ b/present_continuous/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <link rel="stylesheet" href="/test.css" />
+    <link rel="stylesheet" href="./test.css" />
     <title>Document</title>
     <script src="./test.js"></script>
     <!-- VERSION 0.4 LangApp-->
@@ -15,7 +15,7 @@
   <body>
     <!--header con boton de cierre-->
     <div class="close-button">
-      <a href="/index.html"
+      <a href="./index.html"
         ><span class="material-symbols-outlined"> close </span></a
       >
     </div>
