--- a/present_continuous/index.html
+++ b/present_continuous/index.html
@@ -15,7 +15,7 @@
   <body>
     <!--header con boton de cierre-->
     <div class="close-button">
-      <a href="./index.html"
+      <a href="../index.html"
         ><span class="material-symbols-outlined"> close </span></a
       >
     </div>
